--- a/OOTPiSP_3/OOTPiSP_3.csproj
+++ b/OOTPiSP_3/OOTPiSP_3.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Trailer.cs" />
     <Compile Include="Transporter.cs" />
     <Compile Include="Truck.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
