--- a/OOTPiSP_3/OOTPiSP_3.csproj
+++ b/OOTPiSP_3/OOTPiSP_3.csproj
@@ -44,24 +44,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Car.cs" />
-    <Compile Include="Dump.cs" />
+    <Compile Include="Bicycle.cs" />
+    <Compile Include="MTB.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Hatchback.cs" />
-    <Compile Include="Passenger.cs" />
+    <Compile Include="RoadBike.cs" />
+    <Compile Include="CityBike.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sedan.cs" />
-    <Compile Include="SUV.cs" />
-    <Compile Include="Touring.cs" />
-    <Compile Include="Trailer.cs" />
-    <Compile Include="Transporter.cs" />
-    <Compile Include="Truck.cs" />
+    <Compile Include="Hybrid.cs" />
+    <Compile Include="BMX.cs" />
+    <Compile Include="KidsBike.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
