--- a/OOTPiSP_3/OOTPiSP_3.csproj
+++ b/OOTPiSP_3/OOTPiSP_3.csproj
@@ -45,12 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bicycle.cs" />
+    <Compile Include="InputComponentsDrawer.cs" />
     <Compile Include="MTB.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Serialiser.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Serialiser.Designer.cs">
+      <DependentUpon>Serialiser.cs</DependentUpon>
     </Compile>
     <Compile Include="RoadBike.cs" />
     <Compile Include="CityBike.cs" />
@@ -59,8 +60,8 @@
     <Compile Include="Hybrid.cs" />
     <Compile Include="BMX.cs" />
     <Compile Include="KidsBike.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Serialiser.resx">
+      <DependentUpon>Serialiser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
